--- a/Resources/views/DataCollector/makegood.html.twig
+++ b/Resources/views/DataCollector/makegood.html.twig
@@ -70,7 +70,7 @@ POSSIBILITY OF SUCH DAMAGE.
 jQuery(function() {
     (new Piece.MakeGood.UI.Context()).create({
         assetBaseURI: "{{ asset('bundles/piecemakegood') }}",
-        resultURI: "{{ path('PieceMakegoodBundle_Result_show') }}"
+        testRunURI: "{{ path('PieceMakegoodBundle_TestRun_run') }}"
     });
 });
   </script>
